# physics_sim

./: CMakeLists.txt  Cargo.toml  README.md  Sol copy.json  Sol.json  const.h  main.cpp  master.cpp  master.h  physics_sim.sln  physics_sim.vcxproj  physics_sim.vcxproj (SSD-WIN's conflicted copy 2021-09-06).filters  physics_sim.vcxproj.filters  resource.h
Debug/: vc142.idb
Debug/physics_sim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  physics_sim.lastbuildstate
Ephemeris/: Earth.txt  Jupiter.txt  Mars.txt  Mercury.txt  Neptune.txt  Saturn.txt  Sol.txt  Uranus.txt  Venus.txt
Render/: Renderer.cpp  Renderer.h
WorldData/: Sol.json
phys/: bodies.cpp  bodies.h  phys.cpp  phys.h  world.cpp  world.h
phys/math/: const.h  matrix.h  vec.cpp  vec.h
src/: ch_com.rs  constants.rs  main.rs
src/math/: draw.rs  graph.rs  lin_alg.rs  mod.rs  phys.rs  vec.rs
src/p_engine/: mod.rs
src/render/: mod.rs
x64/Debug/: bodies.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  physics_sim.exe.recipe  physics_sim.ilk  physics_sim.vcxproj.FileListAbsolute.txt  vc142.idb  world.nativecodeanalysis.sarif  world.nativecodeanalysis.xml
x64/Debug/physics_sim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  physics_sim.lastbuildstate
