cargo-features = ["resolver"]
[package]
name = "physicssim_rust"
version = "0.1.0"
authors = ["erik"]
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.0"
pollster = "*"
winit = "0.26.0"
rend3 = "0.2.3"
serde = { version="1.0.136", features = ["derive"] }
serde_json = "*"
chrono = "*"
glium = "0.31.0"

[build]
rustc-wrapper = 'C:\Users\19erlind\scoop\apps\sccache\0.2.14\sccache.exe'